@@ -1,3 +1,7 @@
+2019-06-26  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* table.C: Fix show_all() on a table.
+
 2019-06-25  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* Generate context popup menus using the theme file.
